ensure the minus and plus icons show when a feature is collapsed or open

--- a/wagtailio/static/sass/components/_feature.scss
+++ b/wagtailio/static/sass/components/_feature.scss
@@ -34,7 +34,7 @@
         color: $color--teal;
         transition: color 0.3s;
 
-        &--minus {
+        &--plus {
             display: none;
         }
 
@@ -46,6 +46,16 @@
     &.is-collapsed {
         #{$root}__inner-content {
             display: none;
+        }
+
+        #{$root}__toggle-icon {
+            &--minus {
+                display: none;
+            }
+
+            &--plus {
+                display: block;
+            }
         }
     }
 
